cmake_minimum_required(VERSION 3.8)

add_executable(1.1.hello_window "1.1.hello_window.cpp")
target_link_libraries(1.1.hello_window LDL)

add_executable(1.2.hello_window_clear "1.2.hello_window_clear.cpp")
target_link_libraries(1.2.hello_window_clear LDL)

add_executable(2.1.hello_triangle "2.1.hello_triangle.cpp")
target_link_libraries(2.1.hello_triangle LDL)

add_executable(2.2.hello_triangle_indexed "2.2.hello_triangle_indexed.cpp")
target_link_libraries(2.2.hello_triangle_indexed LDL)

add_executable(2.3.hello_triangle_exercise1 "2.3.hello_triangle_exercise1.cpp")
target_link_libraries(2.3.hello_triangle_exercise1 LDL)

add_executable(2.4.hello_triangle_exercise2 "2.4.hello_triangle_exercise2.cpp")
target_link_libraries(2.4.hello_triangle_exercise2 LDL)

add_executable(2.5.hello_triangle_exercise3 "2.5.hello_triangle_exercise3.cpp")
target_link_libraries(2.5.hello_triangle_exercise3 LDL)

add_executable(3.1.shaders_uniform "3.1.shaders_uniform.cpp")
target_link_libraries(3.1.shaders_uniform LDL)

add_executable(3.2.shaders_interpolation "3.2.shaders_interpolation.cpp")
target_link_libraries(3.2.shaders_interpolation LDL)

add_executable(3.3.shaders_class "3.3.shaders_class.cpp")
target_link_libraries(3.3.shaders_class LDL)

add_executable(4.1.textures "4.1.textures.cpp")
target_link_libraries(4.1.textures LDL)

add_executable(4.2.textures_combined "4.2.textures_combined.cpp")
target_link_libraries(4.2.textures_combined LDL)

add_executable(4.4.textures_exercise2 "4.4.textures_exercise2.cpp")
target_link_libraries(4.4.textures_exercise2 LDL)

add_executable(4.5.textures_exercise3 "4.5.textures_exercise3.cpp")
target_link_libraries(4.5.textures_exercise3 LDL)

add_executable(4.6.textures_exercise4 "4.6.textures_exercise4.cpp")
target_link_libraries(4.6.textures_exercise4 LDL)







